tests/invalid/mode_inf.err_exp
mode_inf.m:009: In clause for `p(out, out)':
mode_inf.m:009:   in call to predicate `mode_inf:q/2':
mode_inf.m:009:   mode error: arguments `X, Y'
mode_inf.m:009:   have insts `free, free',
mode_inf.m:009:   which does not match any of the valid modes for
mode_inf.m:009:   the callee, because of the following error.
mode_inf.m:011: In clause for `q(out(not_reached), out(not_reached))':
mode_inf.m:011:   in argument 2 of clause head:
mode_inf.m:011:   mode error in unification of `HeadVar__2' and `X'.
mode_inf.m:011:   Variable `HeadVar__2' has instantiatedness `free',
mode_inf.m:011:   variable `X' has instantiatedness `free'.
For more information, try recompiling with `-E'.
